Add postgres config

--- a/.env_example
+++ b/.env_example
@@ -1,4 +1,11 @@
-## Application settings
+## Database configuration
+POSTGRES_HOST='localhost'
+POSTGRES_PORT=5432
+POSTGRES_USER='postgres'
+POSTGRES_DBNAME='postgres'
+POSTGRES_PASSWORD='postgres'
+
+## Application configuration
 WEB_HOST=0.0.0.0
 WEB_PORT=80
 
