Add static key configuration

--- a/.env_example
+++ b/.env_example
@@ -9,4 +9,7 @@ POSTGRES_PASSWORD='postgres'
 WEB_HOST=0.0.0.0
 WEB_PORT=80
 
+# Static key used to hash passwords
+STATIC_KEY=houdini
+
 DEBUG=False
