--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 eval_type_backport==0.1.3
-psychopg2-binary==2.9.9
+psycopg2-binary==2.9.9
 python-dotenv==1.0.1
 sqlalchemy==2.0.29
 fastapi==0.110.1
