Add sendgrid configuration

--- a/.env_example
+++ b/.env_example
@@ -5,11 +5,26 @@ POSTGRES_USER='postgres'
 POSTGRES_DBNAME='postgres'
 POSTGRES_PASSWORD='postgres'
 
+## Sendgrid configuration
+SITE_NAME='localhost'
+FROM_EMAIL='noreply@localhost'
+SENDGRID_API_KEY=''
+MAX_ACCOUNT_EMAIL=5
+
 ## Application configuration
 WEB_HOST=0.0.0.0
 WEB_PORT=80
 
-# Static key used to hash passwords
+# Approve usernames automatically
+APPROVE_USERNAME=True
+
+# Activate player automatically
+ACTIVATE_PLAYER=True
+
+# Force capitalized username
+USERNAME_FORCE_CASE=True
+
+# Static key used to hash passwords & tokens
 STATIC_KEY=houdini
 
 DEBUG=False
