Add docs to `DEBUG` env

--- a/.env_example
+++ b/.env_example
@@ -27,4 +27,5 @@ USERNAME_FORCE_CASE=True
 # Static key used to hash passwords & tokens
 STATIC_KEY=houdini
 
+# Enabled debug mode - please only use this in development
 DEBUG=False
