--- a/.env_example
+++ b/.env_example
@@ -15,6 +15,11 @@ MAX_ACCOUNT_EMAIL=5
 WEB_HOST=0.0.0.0
 WEB_PORT=80
 
+# SSL configuration
+SSL_ENABLED=False
+SSL_KEY_PATH=
+SSL_CERT_PATH=
+
 # Approve usernames automatically
 APPROVE_USERNAME=True
 
