--- a/.env_example
+++ b/.env_example
@@ -14,6 +14,7 @@ MAX_ACCOUNT_EMAIL=5
 ## Application configuration
 WEB_HOST=0.0.0.0
 WEB_PORT=80
+WEB_DOMAIN=localhost
 
 # SSL configuration
 SSL_ENABLED=False
